[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
futures-util = "0.3.31"
gloo = "0.11.0"
async-stream = "0.3"
web-sys = { version = "0.3", features = ["ReadableStream", "ReadableStreamDefaultReader"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"
